syntax = "proto3";

package product;

option go_package = "github.com/semirm-dev/faceit/user/proto";

service AccountManagement {
  rpc AddAccount(AccountRequest) returns(AccountMessage) {};
  rpc ModifyAccount(AccountMessage) returns(AccountMessage) {};
  rpc DeleteAccount(DeleteAccountRequest) returns(DeleteAccountResponse) {};
  rpc GetAccountsByFilter(GetAccountsByFilterRequest) returns(AccountsResponse) {};
}

message GetAccountsByFilterRequest {
  int64 id = 1;
  string nickname = 2;
}

message AccountsResponse {
  repeated AccountMessage accounts = 1;
}

message AccountMessage {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string password = 5;
  string email = 6;
  string country = 7;
  string created_at = 8;
  string updated_at = 9;
}

message AccountRequest {
  string first_name = 1;
  string last_name = 2;
  string nickname = 3;
  string password = 4;
  string email = 5;
  string country = 6;
}

message DeleteAccountRequest {
  int64 id = 1;
}

message DeleteAccountResponse {
  bool success = 1;
}